Fix hidden navbar text on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -190,11 +190,9 @@ nav.navbar.navbar-view-static {
 }
 
 @media (max-width: 380px) {
-
-    .navbar-brand.navbar-brand.navbar-view-static #navbar-brand-text {
-        visibility: hidden;
-        font-size: 8px;
-    }
+    .navbar-brand.navbar-brand.navbar-view-static #navbar-brand-text .overflow {
+        display: none;
+  }
 }
 
 /* Content Header */
